--- a/src/JIT.Application/JIT.Application.csproj
+++ b/src/JIT.Application/JIT.Application.csproj
@@ -23,5 +23,6 @@
     <PackageReference Include="Abp.EntityFramework" Version="4.5.0" />
     <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.10" />
   </ItemGroup>
 </Project>
