--- a/src/JITEF/JIT.EF.csproj
+++ b/src/JITEF/JIT.EF.csproj
@@ -211,6 +211,7 @@
     <Compile Include="DIME2Barcode\DIME2BarcodeContext.cs" />
     <Compile Include="DIME2Barcode\Entities\BillStatus.cs" />
     <Compile Include="DIME2Barcode\Entities\ICMODaily.cs" />
+    <Compile Include="DIME2Barcode\Entities\ICMOSchedule.cs" />
     <Compile Include="DIME2Barcode\ICException.cs">
       <DependentUpon>DIME2Barcode.tt</DependentUpon>
     </Compile>
