--- a/src/JIT.Application/JIT.Application.csproj
+++ b/src/JIT.Application/JIT.Application.csproj
@@ -25,4 +25,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.10" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="JIT\Organization\Dtos\" />
+  </ItemGroup>
 </Project>
