--- a/src/JITEF/JIT.EF.csproj
+++ b/src/JITEF/JIT.EF.csproj
@@ -209,6 +209,7 @@
       <DependentUpon>DIME2Barcode.edmx</DependentUpon>
     </Compile>
     <Compile Include="DIME2Barcode\DIME2BarcodeContext.cs" />
+    <Compile Include="DIME2Barcode\DIME2BarcondeResolver.cs" />
     <Compile Include="DIME2Barcode\Entities\BillStatus.cs" />
     <Compile Include="DIME2Barcode\Entities\ICMODaily.cs" />
     <Compile Include="DIME2Barcode\Entities\ICMOSchedule.cs" />
@@ -233,6 +234,7 @@
     <Compile Include="DIME2Barcode\ICQualityRpt.cs">
       <DependentUpon>DIME2Barcode.tt</DependentUpon>
     </Compile>
+    <Compile Include="DIME2Barcode\Repository\DIME2BarcodeRepositoryBase.cs" />
     <Compile Include="DIME2Barcode\TB_BadItemRelation.cs">
       <DependentUpon>DIME2Barcode.tt</DependentUpon>
     </Compile>
@@ -271,13 +273,15 @@
       <DependentUpon>DIME2Barcode.edmx</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DIME2Barcode\Repository\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\JIT.Core\JIT.Core.csproj">
       <Project>{0fa75a5b-ab83-4fd0-b545-279774c01e87}</Project>
       <Name>JIT.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JIT.EntityFrameworkCore\JIT.EntityFrameworkCore.csproj">
+      <Project>{E0580562-F8F2-4EBB-B07A-ABFC6F2C314F}</Project>
+      <Name>JIT.EntityFrameworkCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
