Revert "Merge branch 'master' into ZHL"
This reverts commit 4d7f4ba32f7722f804e8c2f458640e192d282d36, reversing
changes made to 9dfe23a18954312ad927aad8ebccb0057ffb50e8.

--- a/src/JIT.Web.Host/app.config
+++ b/src/JIT.Web.Host/app.config
@@ -5,7 +5,8 @@
   <connectionStrings>
     <add name="JITContainer" connectionString="metadata=res://*/JIT.csdl|res://*/JIT.ssdl|res://*/JIT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DIME2Barcode;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DIME2BarcodeContainer" connectionString="metadata=res://*/DIME2Barcode.DIME2Barcode.csdl|res://*/DIME2Barcode.DIME2Barcode.ssdl|res://*/DIME2Barcode.DIME2Barcode.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DIME2Barcode;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DIME2Barcode" connectionString="Server=localhost;Database=DIME2Barcode;Integrated Security=True;" providerName="System.Data.SqlClient"/></connectionStrings>
+    <add name="DIME2Barcode" connectionString="Data Source=.;Initial Catalog=DIME2Barcode;Integrated Security=True"/>
+  </connectionStrings>
   <runtime>
     <gcServer enabled="true"/>
   </runtime>
