--- a/src/JIT.Web.Host/appsettings.json
+++ b/src/JIT.Web.Host/appsettings.json
@@ -1,11 +1,12 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=JITDb; Trusted_Connection=True;"
+    "Default": "Server=localhost\\SQLEXPRESS; Database=DIME2Barcode; Trusted_Connection=True;",
+    "DIME": "Server=localhost\\SQLEXPRESS; Database=DIME2Barcode; Trusted_Connection=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://localhost:4200,http://127.0.0.1:8020,http://localhost:8080,http://localhost:8081,http://localhost:8000,http://localhost:3000"
   },
   "Authentication": {
     "JwtBearer": {
