--- a/src/JITEF/App.Config
+++ b/src/JITEF/App.Config
@@ -4,7 +4,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="JITContainer" connectionString="metadata=res://*/JIT.csdl|res://*/JIT.ssdl|res://*/JIT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DIME2Barcode;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="DIME2BarcodeContainer" connectionString="metadata=res://*/DIME2Barcode.DIME2Barcode.csdl|res://*/DIME2Barcode.DIME2Barcode.ssdl|res://*/DIME2Barcode.DIME2Barcode.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DIME2Barcode;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="JITContainer" connectionString="metadata=res://*/JIT.csdl|res://*/JIT.ssdl|res://*/JIT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\\SQLEXPRESS;initial catalog=DIME2Barcode;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DIME2BarcodeContainer" connectionString="metadata=res://*/DIME2Barcode.DIME2Barcode.csdl|res://*/DIME2Barcode.DIME2Barcode.ssdl|res://*/DIME2Barcode.DIME2Barcode.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.167;initial catalog=DIME2Barcode;user id=sa;password=admin@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DIME2Barcode" connectionString="Data Source=192.168.1.167;Initial Catalog=DIME2Barcode;Integrated Security=True"/>
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
